// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Npc component tests Default Npc Rendering 1`] = `
<li
  onClick={[MockFunction]}
  style={
    Object {
      "color": "blue",
    }
  }
>
  Bobo
</li>
`;

exports[`Npc component tests Selected Npc Rendering 1`] = `
<li
  onClick={[MockFunction]}
  style={
    Object {
      "color": "red",
    }
  }
>
  Bobo
</li>
`;
